# rpg-librarian

./: .gitignore  README.md  pyproject.toml
src/rpg_librarian/: __init__.py  __main__.py
src/rpg_librarian/commands/: __init__.py  base_command.py  build_catalog_command.py  clean_command.py  delete_duplicates_command.py  extact_text_command.py  extract_errors_command.py  prune_catalog_command.py  report_duplicates_command.py  test_command.py
src/rpg_librarian/console/: file_logging_protocol.py  main.py  rich_logging_protocol.py
src/rpg_librarian/dedupe/: duplicate_data.py  duplicate_report.py  find_duplicates.py
src/rpg_librarian/metadata/: audio_extractor.py  generate_base_metadata.py  generate_extractor.py  image_extractor.py  mesh_extractor.py  metadata_extractor.py  no_metadata_extractor.py  pdf_extractor.py  svg_extractor.py  video_extractor.py
src/rpg_librarian/resources/: resource_loader.py
tests/unit/: conftest.py  test_audio_extraction.py  test_base_command.py  test_build_catalog_command.py  test_catalog_persistence.py  test_clean_command.py  test_cli.py  test_delete_duplicates_command.py  test_enumerate_entries.py  test_extract_errors_command.py  test_find_duplicates.py  test_generate_audio_metadata.py  test_generate_catalog_entry.py  test_generate_image_metadata.py  test_generate_video_metadata.py  test_image_extraction.py  test_mesh_extraction.py  test_pdf_extraction.py  test_progressive_build.py  test_prune_catalog_command.py  test_report_duplicates_command.py  test_svg_extraction.py  test_text_extraction.py  test_video_extraction.py
(+42 files in other folders)
