[project]
name = "rpg-librarian"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Erik Saltwell", email = "erik.saltwell@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "imagehash>=4.3.2",
    "jinja2>=3.1.0",
    "litellm>=1.90.0",
    "marker>=2.1.3",
    "mutagen>=1.48.1",
    "pillow>=12.2.0",
    "pyacoustid>=1.3.1",
    "pydantic>=2.13.3",
    "pymediainfo>=7.0.1",
    "pymupdf>=1.28.0",
    "python-dotenv>=1.2.1",
    "python-magic>=0.4.27",
    "rich>=14.2.0",
    "structlog>=25.5.0",
    "trimesh>=4.12.2",
    "typer>=0.21.1",
]

[project.scripts]
rpg-librarian = "rpg_librarian.console:main.app"

[build-system]
requires = ["uv_build>=0.9.25,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyright>=1.1.0",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
    "ssort>=0.16.0",
    "ty>=0.0.1a5",
]


[tool.pytest.ini_options]
testpaths = ["tests/unit"]
addopts = "-q -s"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
# src/ layout — tell ty where first-party code lives
root = ["src"]
python-version = "3.12"

[tool.ty.rules]
# Reasonable signal without going full-strict
possibly-unresolved-reference = "warn"
unresolved-attribute = "warn"
unused-ignore-comment = "warn"
redundant-cast = "warn"
